upload button IE8-IE7 fix

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -3810,7 +3810,7 @@ label.label_holder input.file{
   width: auto;
   opacity: 0;
   -moz-opacity: 0;
-  left:-21px;
+  left:-192px;
   top:0px;
   position: relative;
   z-index:2;
